crates/snow-lexer/tests/snapshots/lexer_tests__send_expr_tokens.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Send
  text: send
  span:
    - 0
    - 4
- kind: LParen
  text: (
  span:
    - 4
    - 5
- kind: Ident
  text: pid
  span:
    - 5
    - 8
- kind: Comma
  text: ","
  span:
    - 8
    - 9
- kind: Ident
  text: msg
  span:
    - 10
    - 13
- kind: RParen
  text: )
  span:
    - 13
    - 14
- kind: Eof
  text: ""
  span:
    - 14
    - 14
