crates/snow-lexer/tests/snapshots/lexer_tests__simple_string.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: StringContent
  text: hello world
  span:
    - 1
    - 12
- kind: StringEnd
  text: "\""
  span:
    - 12
    - 13
- kind: Eof
  text: ""
  span:
    - 13
    - 13
