crates/snow-lexer/tests/snapshots/lexer_tests__span_accuracy_interpolation.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: StringContent
  text: "hello "
  span:
    - 1
    - 7
- kind: InterpolationStart
  text: "${"
  span:
    - 7
    - 9
- kind: Ident
  text: name
  span:
    - 9
    - 13
- kind: InterpolationEnd
  text: "}"
  span:
    - 13
    - 14
- kind: StringEnd
  text: "\""
  span:
    - 14
    - 15
- kind: Eof
  text: ""
  span:
    - 15
    - 15
