crates/snow-lexer/tests/snapshots/lexer_tests__spawn_expr_tokens.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Spawn
  text: spawn
  span:
    - 0
    - 5
- kind: LParen
  text: (
  span:
    - 5
    - 6
- kind: Ident
  text: func
  span:
    - 6
    - 10
- kind: Comma
  text: ","
  span:
    - 10
    - 11
- kind: Ident
  text: args
  span:
    - 12
    - 16
- kind: RParen
  text: )
  span:
    - 16
    - 17
- kind: Eof
  text: ""
  span:
    - 17
    - 17
