crates/snow-lexer/tests/snapshots/lexer_tests__string_interpolation.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\""
  span:
    - 0
    - 1
- kind: StringContent
  text: "hello "
  span:
    - 1
    - 7
- kind: InterpolationStart
  text: "${"
  span:
    - 7
    - 9
- kind: Ident
  text: name
  span:
    - 9
    - 13
- kind: InterpolationEnd
  text: "}"
  span:
    - 13
    - 14
- kind: StringEnd
  text: "\""
  span:
    - 14
    - 15
- kind: Newline
  text: "\n"
  span:
    - 15
    - 16
- kind: StringStart
  text: "\""
  span:
    - 16
    - 17
- kind: StringContent
  text: "sum is "
  span:
    - 17
    - 24
- kind: InterpolationStart
  text: "${"
  span:
    - 24
    - 26
- kind: Ident
  text: a
  span:
    - 26
    - 27
- kind: Plus
  text: +
  span:
    - 28
    - 29
- kind: Ident
  text: b
  span:
    - 30
    - 31
- kind: InterpolationEnd
  text: "}"
  span:
    - 31
    - 32
- kind: StringEnd
  text: "\""
  span:
    - 32
    - 33
- kind: Newline
  text: "\n"
  span:
    - 33
    - 34
- kind: StringStart
  text: "\""
  span:
    - 34
    - 35
- kind: InterpolationStart
  text: "${"
  span:
    - 35
    - 37
- kind: Ident
  text: x
  span:
    - 37
    - 38
- kind: InterpolationEnd
  text: "}"
  span:
    - 38
    - 39
- kind: StringEnd
  text: "\""
  span:
    - 39
    - 40
- kind: Newline
  text: "\n"
  span:
    - 40
    - 41
- kind: StringStart
  text: "\""
  span:
    - 41
    - 42
- kind: StringContent
  text: no interpolation
  span:
    - 42
    - 58
- kind: StringEnd
  text: "\""
  span:
    - 58
    - 59
- kind: Newline
  text: "\n"
  span:
    - 59
    - 60
- kind: StringStart
  text: "\""
  span:
    - 60
    - 61
- kind: InterpolationStart
  text: "${"
  span:
    - 61
    - 63
- kind: Ident
  text: greeting
  span:
    - 63
    - 71
- kind: InterpolationEnd
  text: "}"
  span:
    - 71
    - 72
- kind: StringContent
  text: ", "
  span:
    - 72
    - 74
- kind: InterpolationStart
  text: "${"
  span:
    - 74
    - 76
- kind: Ident
  text: name
  span:
    - 76
    - 80
- kind: InterpolationEnd
  text: "}"
  span:
    - 80
    - 81
- kind: StringContent
  text: "!"
  span:
    - 81
    - 82
- kind: StringEnd
  text: "\""
  span:
    - 82
    - 83
- kind: Newline
  text: "\n"
  span:
    - 83
    - 84
- kind: StringStart
  text: "\""
  span:
    - 84
    - 85
- kind: StringContent
  text: "nested braces "
  span:
    - 85
    - 99
- kind: InterpolationStart
  text: "${"
  span:
    - 99
    - 101
- kind: Ident
  text: map
  span:
    - 101
    - 104
- kind: LBracket
  text: "["
  span:
    - 104
    - 105
- kind: Ident
  text: key
  span:
    - 105
    - 108
- kind: RBracket
  text: "]"
  span:
    - 108
    - 109
- kind: InterpolationEnd
  text: "}"
  span:
    - 109
    - 110
- kind: StringEnd
  text: "\""
  span:
    - 110
    - 111
- kind: Newline
  text: "\n"
  span:
    - 111
    - 112
- kind: Eof
  text: ""
  span:
    - 112
    - 112
