crates/snow-lexer/tests/snapshots/lexer_tests__terminate_keyword.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Terminate
  text: terminate
  span:
    - 0
    - 9
- kind: Do
  text: do
  span:
    - 10
    - 12
- kind: End
  text: end
  span:
    - 13
    - 16
- kind: Eof
  text: ""
  span:
    - 16
    - 16
