crates/snow-lexer/tests/snapshots/lexer_tests__triple_quoted_interpolation.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\"\"\""
  span:
    - 0
    - 3
- kind: StringContent
  text: "hello "
  span:
    - 3
    - 9
- kind: InterpolationStart
  text: "${"
  span:
    - 9
    - 11
- kind: Ident
  text: name
  span:
    - 11
    - 15
- kind: InterpolationEnd
  text: "}"
  span:
    - 15
    - 16
- kind: StringContent
  text: "\nworld"
  span:
    - 16
    - 22
- kind: StringEnd
  text: "\"\"\""
  span:
    - 22
    - 25
- kind: Eof
  text: ""
  span:
    - 25
    - 25
