crates/snow-lexer/tests/snapshots/lexer_tests__triple_quoted_string.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: StringStart
  text: "\"\"\""
  span:
    - 0
    - 3
- kind: StringContent
  text: "hello\nworld"
  span:
    - 3
    - 14
- kind: StringEnd
  text: "\"\"\""
  span:
    - 14
    - 17
- kind: Eof
  text: ""
  span:
    - 17
    - 17
