crates/snow-lexer/tests/snapshots/lexer_tests__unterminated_block_comment.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Error
  text: "#= no close"
  span:
    - 0
    - 11
- kind: Eof
  text: ""
  span:
    - 11
    - 11
