crates/snow-lexer/tests/snapshots/lexer_tests__whitespace_only.snap
---
source: crates/snow-lexer/tests/lexer_tests.rs
expression: tokens
---
- kind: Eof
  text: ""
  span:
    - 6
    - 6
